# PokeAPI

./: .gitignore  README.md  conftest.py  pyproject.toml
app/: __main__.py  settings.py
app/api/: application.py  router.py
app/api/controllers/: berries.py
app/api/schemas/: berries.py
app/api/services/: berries.py
app/core/exceptions/: berries.py
app/tests/: test_berries.py
app/tests/fixtures/: berries.py  example.py
deploy/: Dockerfile  docker-compose.yml
