[tool.poetry]
name = "pokeapi"
version = "0.1.0"
description = "Poke-berries statistics API"
authors = ["Erick Bárcenas <barcenas.developer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
