[tool.poetry]
name = "pokeapi"
version = "0.1.0"
description = "Poke-berries statistics API"
authors = ["Erick Bárcenas <barcenas.developer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
orjson = "^3.10.3"
httpx = "^0.27.0"
pytest = "^8.2.0"
asgi-lifespan = "^2.1.0"
anyio = "^4.3.0"
pytest-asyncio = "^0.23.6"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
